cluster/corona-backend/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcomp-corona-backend
  namespace: cloudcomputing
  labels:
    app: cloudcomp-corona-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloudcomp-corona-backend
